text overflow issue resolved

--- a/src/Components/Notes.module.css
+++ b/src/Components/Notes.module.css
@@ -49,11 +49,17 @@
 
 
 .noteText {
-  padding: 25px;
+  max-height: 45%;
+  padding: 5px 25px 20px 25px;
+  margin-top: 20px;
   line-height: 1.3;
   font-weight: 400;
   letter-spacing: 1px;
+  overflow-y: auto;
+  scrollbar-width: none;
 }
+
+
 
 .dateTime {
   position: absolute;
